Fix T103051: Changed behavior when removing a material slot

Before f1c0249f34c4171ec311 the material was assigned to the previous
slot rather than the next. Though the behavior is arbitrary, there
is no reason to change it.